chore: use POST instead of GET in SQL Service
